# rt

./: .gitignore  2  CMakeLists.txt  README.md  \  boundingbox.rnote  compile_commands.json  distinctColors.py  gen_tiles.go  glad.make  hierarchy.md  imgui.ini  monitor.sh  notes  premake5.lua  sah.md
bench/bunny/m/: 10k.map  1k.map  2.5k.map  20k.map  30k.map  40k.map  50k.map  5k.map  60k.map  70k.map
bench/bunny/r/: README.md  avg.py  bvh.csv  bvhbuild.csv  data.csv  nobvh.csv
bench/cost-rough/: data.csv
bench/multithread/r/: 5k.csv  5kbvh.csv  5kbvho.csv  5ko.csv  avg.py  data.csv  databvh.csv  dataroom.csv  dataroombvh.csv  room.csv  roombvh.csv
bench/reflect/m/: 2s.map  2s2w.map  2s4w.map  preset.map
bench/reflect/o/: 20000.tga
bench/reflect/o/2s/: 0.tga  1.tga  100.tga  1000.tga  20.tga
bench/reflect/o/2s2w/: 0.tga  1.tga  100.tga  1000.tga  20.tga  5.tga
bench/reflect/o/2s4w/: 0.tga  1.tga  10.tga  20.tga  5.tga
bench/reflect/r/: 2s.csv  2s2w.csv  2s2wa.csv  2s4w.csv  2s4wa.csv  2sa.csv  avg.py  comb.csv
bench/res/bunny-decimate/: README.md
bench/sahcost/r/: avg.py  data.csv  out.csv
bench/vox/r/: avg.py  data.csv
bmp/: bmp.cpp  bmp.hpp
cam/: cam.cpp  cam.hpp
compile_commands/: debug_x64.json  release_x64.json
img/: img.cpp  img.hpp
include/: aa.hpp  accel.hpp  bmp.hpp  cam.hpp  gl.hpp  hierarchy.hpp  img.hpp  kd.hpp  map.hpp  mat.hpp  ray.hpp  shape.hpp  test.hpp  tex.hpp  tga.hpp  util.hpp  vec.hpp
main/: CMakeLists.txt  main.cpp
map/: map.cpp  map.hpp  map.plist
maps/: 3sphere.map  bldg.map  box.map  bunny.map  checker.map  cone.map  default.map  dragon-res3.map  flattri.map  hippo.map  kd.map  phong.map  pooltable.map  room.map  scene.map  shadow-demo.map  teapot.map  test.map  tyra.map  variety.map
objparser/: README.md  cube.glb  objparser.py  teapot.blend  teapot.blend1  teapot2.mtl
objparser/ntu/: SOURCE
objparser/pooltable/: table.blend  table.blend1  table.mtl
render_bmp/: bmp.cpp  bmp.hpp
render_gl/: gl.cpp  gl.hpp  pixel.frag  pixel.vert
render_tga/: tga.cpp  tga.hpp
scrots/: bunny-cube-low.tga  bunny-cube-mid.tga  bunny-cube-mid2.tga  bunny-cube-mid3.tga  bunny-cube-mid4.tga  bunny-cube-mid5.tga  checker-mirror.tga  checker-room.tga  checkerfloor-opt-lighting-phong-alt.tga  mirror-hollow-sphere.nfo  tyra.nfo
shape/: shape.cpp  shape.hpp
src/: CMakeLists.txt  aa.cpp  accel.cpp  cam.cpp  gl.cpp  hierarchy.cpp  img.cpp  kd.cpp  map.cpp  ray.cpp  shape.cpp  test.cpp  tex.cpp  tga.cpp  util.cpp
tgareader/: CMakeLists.txt  tgareader.cpp
timings/: CMakeLists.txt  timings.cpp
util/: util.cpp  util.hpp
vec/: mat.hpp  vec.hpp
